--- a/app/templates/main/assorted_news.html
+++ b/app/templates/main/assorted_news.html
@@ -28,10 +28,40 @@
 		.article-descrip{
 			text-indent: 20px;
 		}
+		ul.cloud {
+            width: 500px;
+            list-style: none;
+            padding-left: 0;
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            justify-content: center;
+            line-height: 2.5rem;
+            margin:auto;
+        }
+        ul.cloud a[data-weight="1"] { --size: 1; }
+        ul.cloud a[data-weight="2"] { --size: 2; }
+        ul.cloud a[data-weight="3"] { --size: 3; }
+        ul.cloud a[data-weight="4"] { --size: 4; }
+        ul.cloud a[data-weight="5"] { --size: 5; }
+        ul.cloud a[data-weight="6"] { --size: 6; }
+        ul.cloud a[data-weight="7"] { --size: 7; }
+        ul.cloud a[data-weight="8"] { --size: 8; }
+        ul.cloud a[data-weight="9"] { --size: 9; }
+        ul.cloud a {
+            --size: attr(data-weight number, 2); 
+            font-size: calc(var(--size) * 0.25rem + 0.5rem);
+            color: #a33;
+            display: block;
+            padding: 0.125rem 0.25rem;
+            text-decoration: none;
+            position: relative;
+        }
 	</style>
 	<h1>Assorted News</h1>
 	<nav class="navbar navbar-mid">
 		<div class="journal-container">
+			<a class= "navbar-brand" href="#" onclick="openJournal('WordCloud')">Word Cloud</a>
 			<a class= "navbar-brand" href="#" onclick="openJournal('Bloomberg')">Bloomberg</a>
 			<a class= "navbar-brand" href="#" onclick="openJournal('FT')">Financial Times</a>
 			<a class= "navbar-brand" href="#" onclick="openJournal('CNBC')">CNBC</a>
@@ -41,7 +71,16 @@
 		</div>
 	</nav>
 
-	<div id="Bloomberg" class="journal">
+	<div id="WordCloud" class="journal">
+		<h2>Word Cloud</h2>
+		<ul class="cloud" role="navigation" aria-label="Webdev tag cloud">
+			{% for word in word_cloud %}
+			<li><a data-weight="{{ word_cloud[word] }}" href="{{ url_for('headline_tag', tag=word) }}">{{ word }}</a></li>
+			{% endfor %}
+		</ul>
+	</div>
+
+	<div id="Bloomberg" class="journal" style="display:none">
 		<h2>Bloomberg</h2>
 		<nav class="navbar navbar-mid">
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -55,10 +94,10 @@
 		{% for sect in bloomberg_sect %}
 		<div id="Bloomberg-{{ sect }}" class="journal-sect" style="display:none">
 			<h3>{{ sect }}</h3>
-				{% for art_title in bloomberg_sect[sect] %}
+				{% for article in bloomberg_sect[sect] %}
 				<div class="article-teaser">
-					<h4><a href="{{ url_for('bloom_article',title=art_title.replace(' ','+'), sect=sect) }}" target="_blank">{{ art_title }}</a></h4>
-					<h5>{{ bloomberg_sect[sect][art_title]['date'] }}</h5>
+					<h4><a href="{{ url_for('bloom_article',title=article['title'].replace(' ','+'), sect=sect) }}" target="_blank"> {{ article['title'] }}</a></h4>
+					<p class="article-descrip"> {{ article['description'] }} </p>
 				</div>
 				{% endfor %}
 		</div>
